edited odp/pdf for today, concluded topliss aula_eos.ipynb

--- a/material_didatico/exemplos/exemplos_6_funcoes.ipynb
+++ b/material_didatico/exemplos/exemplos_6_funcoes.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# exemplos 6: funções"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importar o comando pythontutor para gerar os links de cada exemplo para o site de visualização\n",
+    "from python_tutor_magic import pythontutor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## def"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Vamos definir uma função chamada pelo nome func_V_IG\n",
+    "* Essa função vai receber uns valores que vão ser associados localmente às variáveis (dummy) T, P e n.\n",
+    "* Essa função vai fazer umas contas com esses valores e vai salvar os cálculos na variável local V\n",
+    "* Essa função vai retornar o valor da variável local V e o programa vai armazenar o resultado retornado na variável result_V"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,26 +42,116 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mType:\u001b[0m        module\n",
-       "\u001b[0;31mString form:\u001b[0m <module 'python_tutor_magic' from '/home/segtovichisv/Desktop/curso-python-chemeng/drafts/notebookdrafts/python_tutor_magic.py'>\n",
-       "\u001b[0;31mFile:\u001b[0m        ~/Desktop/curso-python-chemeng/drafts/notebookdrafts/python_tutor_magic.py\n",
-       "\u001b[0;31mDocstring:\u001b[0m  \n",
-       "usage:\n",
-       "once:\n",
-       "import python_tutor_magic\n",
-       "target cells, on the first line as usual:\n",
-       "%%pythontutor\n",
-       "this will generate a url for python tutor wuth the current cell code\n",
-       "this will only convert the code to url, this will not try to run the code in the current kernel\n"
+       "0.022412722427831235"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import python_tutor_magic\n",
-    "python_tutor_magic?"
+    "#%%pythontutor\n",
+    "\n",
+    "R = 8.314\n",
+    "\n",
+    "def func_V_IG(T,P,n):\n",
+    "    \n",
+    "    V = n*R*T/P\n",
+    "    \n",
+    "    return V\n",
+    "\n",
+    "result_V = func_V_IG(273.15,1.01325e5,1)\n",
+    "\n",
+    "result_V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## dummy x actual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.022709690999999997, 247757.2)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#%%pythontutor\n",
+    "\n",
+    "R = 8.314\n",
+    "# os nomes dummy são os nomes definidos no cabeçalho da função\n",
+    "def func_V_IG(T,P,n):\n",
+    "    V = n*R*T/P\n",
+    "    return V\n",
+    "\n",
+    "T1=273.15\n",
+    "P1=1e5\n",
+    "n1=1\n",
+    "\n",
+    "outraT=298\n",
+    "outraP=.1\n",
+    "outron=10\n",
+    "\n",
+    "# os nomes actual são os nomes usados para passar os objetos na chamada\n",
+    "V1=func_V_IG(T1,P1,n1)\n",
+    "outroV=func_V_IG(outraT,outraP,outron)\n",
+    "\n",
+    "V1,outroV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## argumentos posicionais e argumentos palavra-chave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%pythontutor\n",
+    "\n",
+    "R = 8.314\n",
+    "# os nomes dummy são os nomes definidos no cabeçalho da função\n",
+    "def func_V_IG(T,P,n):\n",
+    "    V = n*R*T/P\n",
+    "    return V\n",
+    "\n",
+    "T1=273.15\n",
+    "P1=1e5\n",
+    "n1=1\n",
+    "\n",
+    "# a chamada pode ser feita usando or argumentos de forma posicional\n",
+    "# respeitando a ORDEM definida pelos dummy no cabeçalho\n",
+    "V1=func_V_IG(T1,P1,n1)\n",
+    "\n",
+    "# ou pode ser feita por palavra-chave\n",
+    "# respeitando os NOMES dos dummy no cabeçalho\n",
+    "V2=func_V_IG(T=T1,P=P1,n=n1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## return"
    ]
   },
   {
@@ -36,54 +160,41 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Encoding the current cell code into a python tutor url...\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<a href='http://pythontutor.com/live.html#code=from%20decimal%20import%20Decimal%20as%20dec%0Afrom%20decimal%20import%20localcontext%0A%0Afrom%20decimal%20import%20getcontext%0A%0Aprint%28getcontext%28%29%29%0Ax%3Ddec%281%29/dec%287%29%0Aprint%28x%29%0Ay%3Dx%2Bx%2Bx%2Bx%2Bx%2Bx%2Bx%0Aprint%28y%29%0A%0A%0Awith%20localcontext%28%29%20as%20ctx%3A%0A%20%20%20%20print%28ctx%29%0A%20%20%20%20ctx.prec%3D50%0A%20%20%20%20x%3Ddec%281%29/dec%287%29%0A%20%20%20%20print%28x%29%0A%20%20%20%20y%3Dx%2Bx%2Bx%2Bx%2Bx%2Bx%2Bx%0A%20%20%20%20print%28y%29'>Your URL is ready: click to try this code on python tutor [ . > ]</a>"
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "((0.022709690999999997, 0.022709690999999997),\n",
+       " 0.022709690999999997,\n",
+       " 0.022709690999999997)"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%pythontutor\n",
-    "from decimal import Decimal as dec\n",
-    "from decimal import localcontext\n",
+    "#%%pythontutor\n",
     "\n",
-    "from decimal import getcontext\n",
+    "R = 8.314\n",
+    "# os nomes dummy são os nomes definidos no cabeçalho da função\n",
+    "def func_V_IG(T,P,n):\n",
+    "    V = n*R*T/P\n",
+    "    return V, V/n\n",
     "\n",
-    "print(getcontext())\n",
-    "x=dec(1)/dec(7)\n",
-    "print(x)\n",
-    "y=x+x+x+x+x+x+x\n",
-    "print(y)\n",
+    "T1=273.15\n",
+    "P1=1e5\n",
+    "n1=1\n",
     "\n",
+    "# a chamada pode ser feita usando or argumentos de forma posicional\n",
+    "# respeitando a ORDEM definida pelos dummy no cabeçalho\n",
+    "results=func_V_IG(T1,P1,n1)\n",
     "\n",
-    "with localcontext() as ctx:\n",
-    "    print(ctx)\n",
-    "    ctx.prec=50\n",
-    "    x=dec(1)/dec(7)\n",
-    "    print(x)\n",
-    "    y=x+x+x+x+x+x+x\n",
-    "    print(y)\n"
+    "# ou pode ser feita por palavra-chave\n",
+    "# respeitando os NOMES dos dummy no cabeçalho\n",
+    "V,molarV=func_V_IG(T1,P1,n1)\n",
+    "\n",
+    "results, V, molarV"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
