improvement aulaEOS; some lowRes figs

--- a/material_didatico/aula_eos/aula_eos.ipynb
+++ b/material_didatico/aula_eos/aula_eos.ipynb
@@ -15,7 +15,19 @@
    "source": [
     "# Introdução\n",
     "\n",
-    "sistema metano"
+    "O objetivo dessa aula é apresentar uma metodologia de resolução computacional de equação de estado cúbica.\n",
+    "\n",
+    "> Por resolução, entendamos cálculo de pressão a partir de volume e temperatura, cálculo de volume a partir de pressão e temperatura, cálculo de propriedades residuais (entalpia, entropia, energia de Gibbs).\n",
+    "\n",
+    "Além disso é apresentada uma metodologia para o cálculo de equilíbrio líquido vapor a partir do critério de igualdade de potencial químico do componente em cada fase.\n",
+    "\n",
+    "> O critério de equlíbrio é satisfeito utilizando os cálculos de energia de Gibbs residual a partir da equação de estado.\n",
+    "\n",
+    "Esta aula se limita ao estudo de substâncias puras\n",
+    "\n",
+    "> São estudadas a relação PVT de substância pura em estado líquido ou vapor e em equilíbrio de fases, e a curva univariante de pressão de saturação.\n",
+    "\n",
+    "Os cálculos que seguem são realizados utilizado a equação de estado cúbica de Soave para a substância Metano."
    ]
   },
   {
@@ -29,62 +41,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* programação P(T,V) usando SRK (Poling)\n",
-    "  * grid P versus grid V para dados T\n",
-    "  * desenhar isotermas\n",
-    "* programação V(P,T) usando roots\n",
-    "  * comparar calculos pontuais com as isotermas\n",
-    "* programação topliss\n",
-    "  * comparar resultados no gráfico\n",
-    "* programação Gresidual (Poling)\n",
-    "  * grid GL vs GV versus P para dado T\n",
-    "  * desenhar GL e GV versus V P para dado T\n",
-    "* programação Psat (bisect)\n",
-    "* grid psat versus grid T\n",
-    "* desenhar Psat versus T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline\n",
-    "from scipy.optimize import bisect, fsolve\n",
-    "from numpy import roots"
+    "1. programação P(T,V) usando SRK (Poling)\n",
+    "  1. cálculo em grid P versus grid V para dados T\n",
+    "  1. desenhar isotermas\n",
+    "1. programação V(P,T) usando método de solução de raiz de polinômios\n",
+    "  1. comparar calculos pontuais com as isotermas\n",
+    "1. programação de pressão limite superior e inferior para cálculo de equilibrio de fases (Topliss)\n",
+    "  1. comparar calculos pontuais com as isotermas\n",
+    "1. programação Gresidual (Poling)\n",
+    "  1. cálculo em grid GL e grid GV versus grid P para dado T\n",
+    "  1. desenhar GL e GV versus P para dado T\n",
+    "1. programação de resolução da pressão de saturação usando método de bisseção\n",
+    "1. cálculo em grid psat versus grid T\n",
+    "1. desenhar Psat versus T"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resultados e discussão"
+    "## carregando pacotes utilizados nesta aula:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "#1. arrays (vetores Rn) para cálculos em grid\n",
+    "#2. resolução de raiz de polinômios (np.roots)\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
+    "from scipy.optimize import bisect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementação, resultados e discussão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A equação de Soave\n",
+    "é uma equação de estado dada pela expressão de pressão em função de temperatura e volume molar abaixo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P=\\frac{RT}{V-b}-\\frac{a}{V^2+ubV+wb^2}$$\n",
+    "\n",
+    "> $u=1$\n",
+    ">\n",
+    "> $w=0$\n",
+    ">\n",
+    "> $b=\\frac{0.08664RT_c}{P_c}$\n",
+    ">\n",
+    "> $a=\\frac{0.42748R^2T_c^2}{P_c}(1+f(1-(T/T_c)^{(1/2)}))^2$\n",
+    ">\n",
+    ">$f=0.48+1.574w-0.176w^2$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nota-se que sua parametrização ($a$,$b$) é dada em função de propriedades do componente (temperatura crítica - $T_c$, pressão crítica - $P_c$, e o fator acêntrico de Pitzer ($w$))\n",
+    "\n",
+    "> Abaixo são dadas as propriedades para o metano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "Tc= 190.6 #K\n",
     "Pc= 45.99e5 #bar\n",
-    "omega= 0.012"
+    "omega= 0.012 #adimensional"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## P eos"
+    "Aqui é definida como constante global do roteiro de cálculo da aula a constante de gases $R$ em unidades do sistema internacional S.I."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +148,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def P_soave(T,V):\n",
-    "    return R*T/(V-b) - f_a(T)/(V**2 + u*b*V + w*b**2)"
+    "Aqui é implementada a equação de estado apresentada\n",
+    "> A implementação é feita como uma função de temperatura e volume molar retornando pressão,\n",
+    ">\n",
+    "> Essa equação conta com constantes ou parâmetros globais $R$, $a$ e $b$\n",
+    ">\n",
+    "> Notemos que o parâmetro $a$ da equação de Soave depende da temperatura, dessa forma faremos a implementação desse parâmetro como uma função global `f_a(T)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P_soave(T,Vm):\n",
+    "    return R*T/(Vm-b) - f_a(T)/(Vm**2 + u*b*Vm + w*b**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,12 +193,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* grid"
+    "## Cálculo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* testes\n",
+    "\n",
+    "Podemos arbitrar valores de temperatura e volume molar para verificar se a função retorna valores coerentes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8200446679.179468\n",
+      "7398098.854986852\n",
+      "818449.5943072638\n",
+      "82875.11702476481\n",
+      "8298.064789681894\n",
+      "11006135007.347103\n",
+      "10874703.913514586\n",
+      "1103923.0864542571\n",
+      "110794.79211676221\n",
+      "11083.743603948866\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print( P_soave(T=298.,Vm=b) )\n",
+    "print( P_soave(T=298.,Vm=b*1.01) )\n",
+    "print( P_soave(T=298.,Vm=b*10) )\n",
+    "print( P_soave(T=298.,Vm=b*100) )\n",
+    "print( P_soave(T=298.,Vm=b*1000) )\n",
+    "print( P_soave(T=298.,Vm=b*10000) )\n",
+    "\n",
+    "print( P_soave(T=398.,Vm=b*1.01) )\n",
+    "print( P_soave(T=398.,Vm=b*10) )\n",
+    "print( P_soave(T=398.,Vm=b*100) )\n",
+    "print( P_soave(T=398.,Vm=b*1000) )\n",
+    "print( P_soave(T=398.,Vm=b*10000) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* vetorizado\n",
+    "\n",
+    "Aqui definimos array (vetor Rn) contendo uma sequência de valores arbitrados para volume molar\n",
+    "\n",
+    "> vamos usar um array de tamanho 100 para termos uma quantidade tal de valores calculados que possamos apreciá-la em um gráfico\n",
+    "\n",
+    "Realizaremos o cálculo de pressão para cada elemento do array de volume molar, resultando em um array de valores calculados para pressão em data temperatura.\n",
+    "\n",
+    "além disso, vamos definir um array contendo uma sequência de valores arbitrados para temperatura e repetirmos esse cálculo para cada temperatura.\n",
+    "\n",
+    "> vamos usar um array de tamanho 6 para podermos desenhar 6 isotermas \n",
+    "\n",
+    "em conclusão, para cada valor de temperatura no array seqT, vamos estabelecer um array seqVm e calcular um array seqP, isso quer dizer que teremos 6 arrays seqP, vamos armazená-los em uma lista listP, por outro podemos usar um único seqVm como base para os cálculos vetorizados de pressão em cada temperatura, logo basta armazenarmos um único array seqVm\n",
+    "\n",
+    "> lista é mais conveniente para armazenar uma quantidade pequena de objetos (6 arrays), enquanto que é mais conveniente cada objeto, por sua vez, ser um array pois armazenam uma grande quantidade de dados (100 cálculos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -342,24 +477,24 @@
        "          9.19361236e+04])]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rangeT=np.array([.1,.25,.9,.95,1,2])*Tc\n",
-    "nT=len(rangeT)\n",
+    "seqT=Tc*np.array([.1,.25,.9,.95,1,2])\n",
+    "nT=len(seqT)\n",
     "\n",
     "nV=100\n",
-    "Vm= np.logspace(np.log10(b*1.01),2+np.log10(R*Tc/Pc),nV)\n",
-    "P=[]\n",
-    "for T in rangeT:\n",
-    "    Pi=np.zeros(nV)\n",
+    "seqVm= np.logspace(np.log10(b*1.01),2+np.log10(R*Tc/Pc),nV)\n",
+    "listP=[]\n",
+    "for T in seqT:\n",
+    "    seqP=np.zeros(nV)\n",
     "    for i in range(nV):\n",
-    "        Pi[i]=P_soave(T,Vm[i])\n",
-    "    P.append( Pi )\n",
-    "P"
+    "        seqP[i]=P_soave(T,seqVm[i])\n",
+    "    listP.append( seqP )\n",
+    "listP"
    ]
   },
   {
@@ -371,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +522,7 @@
    ],
    "source": [
     "for i in range(nT):\n",
-    "    plt.semilogx(Vm,P[i],label=str(rangeT[i])+' K') #create a logarithm vs logarithm scale plot of pressure vs volume, using the function pressure in each value of the volume list\n",
+    "    plt.semilogx(seqVm,listP[i],label=str(seqT[i])+' K') #create a logarithm vs logarithm scale plot of pressure vs volume, using the function pressure in each value of the volume list\n",
     "    plt.ylabel(r'$P (\\mathrm{Pa})$') #create labels to be displayed in y axis of the plot\n",
     "    plt.xlabel(r'$\\bar{V} (\\mathrm{m^{3}mol^{-1}})$') #use matplotlib's  mathtext to create special symbols in the x label\n",
     "    plt.title('Equação de estado de Soave \\n (metano)') #create a title for the figure\n",
@@ -401,7 +536,19 @@
    "metadata": {},
    "source": [
     "## V eos\n",
-    "$$Z^3-Z^2(1+B-uB)+Z(A+wB^2-uB-uB^2)-AB-wB^2-wB^3$$"
+    "\n",
+    "A equação de estado de Soave é dita cúbica pois pode ser re-escrita da seguinte forma:\n",
+    "\n",
+    "$$Z^3-Z^2(1+B-uB)+Z(A+wB^2-uB-uB^2)-AB-wB^2-wB^3=0$$\n",
+    "\n",
+    "\n",
+    "Que é um polinômia de grau 3 (equação cúbica) na variável Z\n",
+    "\n",
+    "em que \n",
+    "\n",
+    "$$Z=\\frac{PV}{RT}$$\n",
+    "\n",
+    "Vamos implementar essa forma polinomial e resolver usando um método de solução de polinômios\n"
    ]
   },
   {
