proposta de trabalho e template de trabalhos

--- a/material_didatico/aula_eos/sympy_eos.ipynb
+++ b/material_didatico/aula_eos/sympy_eos.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topliss"
+    "# P limits"
    ]
   },
   {
@@ -25,15 +25,15 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAARMAAAAtBAMAAAB/gJLiAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdqu7zZkQ7zKJVEQi\n3WYRMBq/AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAEgElEQVRYCc1YS2wbVRQ9/szY4+/wCUJCKI6h\nCzbEpC3d0ShyEapUxVERUpFKRxTEBskB8VkBXrBCghiJSCyAmrIAdRPvAiuPkBCiCxoQEkIQxaoK\nGxZp66Rt2jTmvpk3bzJvbMdfkSvNzLvn3Hve9bzPzBjoaJeb2YNPIXFzarKRnS13DB052QAuZbQy\nIitQ6iPvrVMH0WtA8FaQ6ikgVe0UOXIucAtIbn8ErFcQMEbeXacOQvPAUq4ETBqIdwocPZfOIPY6\n6+adAfpKnJp7a4B0nrowcd9midqJzQG0ls3w1QHSeeq4gSsGtVO3+9dS34WS6z/dyTwCpMvkBG84\nSO9X5QaSeu9pcsZ1tq0QSNtK3xbJoVjqO9tJjO7QAiqQR9tK31YsY6nvZJHItpVzumptKwLstVGs\n4FDM7DVLjmczf13/ADhqyFT3flhP/ap1H946Upm9XofyhK4das7orUO6QNWJT79/qIs4Crm3OfXI\nMaO72FFHbQChIWyHQygzugXE6Am8DyxwBwhQOfvAQrRMglTOPrD09GBb2BB/wkIZsT+Ynpa3bICN\nddCqxh9bnDMHFRlOfsudtNnOaGJBPbFK9luJmul2cT3jTPguHfvDouIFTWO/dXU187/VFRjgBW3I\nRYfbvKCdz2YPdNUVD1w8bEjhsWw2u8dy1E4+5yYpsw3d9fpvaWZwuvfsz/Bo70l7ZSTN6PZeMX7+\nLyyYftSLBNY2KoiuvelB1SMrHp85DzePAx/eLCSrCenh4TBnW39DWWJ/4lLVJykDxWlCzktoOCMB\ntMfQKwZiDI9Jk04wM74kC7DFlozW7C40Mk9OZhfAmumKBJD7Nh30fU/f1nzOxfhVMNIS/ZIFk9li\nv9hOpzN7rQ2UpIiaIQHkztLxIIMX2YlMlMKZuHS3nFIsMa1gJ3U6B2kS/iQHfC4D5E+aSJTpmnJE\nRSmc0Va8WU4pltjfXq6lp9EkzMjMzD3PyxDOVe3x+Q7f2pwohTPhibGKOqbjR8PmnVKYWLwcLzHu\nCr7mrB3jOaeu+cdH3TCKpieKnHXdGp/o8QtP2pQohTPFp9VtJTaPcZ7JS7HE3r/wlaERN4VaVRYW\nfnzTPz60RqwvaBHEGrWCNT6RZvOqjYtSOENrZOtnZRoHeRovxRJ7r9nEReJ2EDI57b+oDWd8XrIe\nks9QCOXQV6dkxZy1fjhKr18n3sjnM8zlzLNQt4yIjtcY9kk+/3s+z5a3ECOOdkeFsW3sbsp3y8IF\n1CpyeHrlXy8k7gpnjiF+GzUjSh+9lvG74orVzMA8NK+Ix1v7weMyJ13HGUNGk9sFLyRK4cwO6G+N\n0wjw8QMvxRU7jVAGF70iHu8on4W7wHSV/raRLdQwvJAohTN38Eqd5mUo948d55QixKaQLKPsFfF4\nZ6oelznBeqjgAxXp0eNucZx5HIeBk1gu8N54Ka7Y/VjORf29uT1ddptOS517wWm611TGbVstcVc4\n8/JYHXjx428mSnYgL8UVU049MPGFzQ35LEppo8tLacMOFVbNznKvtqH/A5Qyd4Og3cZ0AAAAAElF\nTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAARMAAAAsBAMAAAC03EFHAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdqu7zZkQ7zKJVEQi\n3WYRMBq/AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAEcklEQVRYCc1YS2wbVRQ9/szY4+/wCUJCKHbp\nhg0xaUt3NIpchCpVcVSEVKTSER+xQXJA0K5ovWCFBDESkVgANbAAdRPvAiuPkBCiCxoQEkIQxaoK\nGxZp66Rt2jTmvpk3bzzPH2yPLXIlz9x7zr3nXc+b9zxjoKddae478DQSt6anGvvmyj1Tx042gMsZ\nrYzIKpT62EfrNUD0OhC8HaR+CkhVe2WOnQvcBpI7HwAbFQSMsQ/Xa4DQArCcKwFTBuK9EsfPpTOI\nvcmGecfHWImT82d8lPPSxewDWyXyE1s+tFbM8DUf5bx00sBVg/zUneG11HNQcsOXO5WHgXSZguBN\nBxn8rNxEUh+8TK64wbYVAmlbGdoiORRLQ1c7hdFdWkAFimhbGdqKZSwPXSwK2bZyQVetbUWAgzrF\nCg7GzEGr5Hx252/o7wFHDJnqPw7rqV+0/tM7ZypzN+pQntS1g81ZvXNKH6ia/fi7R/rIo5T7m9OP\nHTX6yx131iYQGsF2OII2o9tAjH6B94AF7gIBamcPWIiWSZDa2QOWnvG3hY3wKyyWEfud6Wl5y3xs\nrH67mnx8ad70KzKa+o47abOb0Y0F9fga2a8lctPd8gbGmfA9+uwNi4oHNI1917W1zP/WV8DHA1pr\n00uHjNawP1878XxLYtjHA1qLjGYGZ1rCPt1PsN/NVOYauhsN7yXN6M7g1X9i0fyvqsD6ZgXR9bc9\neerhVU/Mgkebx4D3bxWS1YS0YzvMy51fXCyxP3C52iYpA8UZQr6Q0HBGAmhh0+86YgyPSTMtmNm2\nIguwxZaNzmwLGlmgINMCMDddkQAKz9KHXqrphZZPdIyfBSOti89ZMpkt9rMd9DqyZ8lAScqoGRJA\n4Rx9HmbwEjuQiVY4E5eultOKJaYV7KJexyDdhD/KCZ/KAMVTJhJlOqccUdEKZ7RVb5XTiiX2l5fr\nGGl0E2ZkZva+F2QIF6r2/HyLb2xOtMKZcHaiok7o+MGweacVJhYvx0uMu4qvOGvneI6p6+3zo24a\nRdOTRcGGbs1P9NjFp2xKtMKZ4jPqjhJbwCSv5K1YYu9e/NLQiJtGrSoLizi+1T4/tEas11aRxJxa\nwZqfSLN5zcZFK5yhNbL9kzKDA7yMt2KJnW82cYm4XYRMTref1IYzP69Yv0zPUgrV0KueZMWctX44\nSs88x9/K5zMs5MxzULeNiI43GPZRPv9bPs+WtxAjjnZHhbFd7F6q7ZKFC6hV5PT06j9eSFwVzhxF\n/A5qRpTeNC3jV8UVq5mBBWheEU+0/r0nZEG6jtOGjCZ3Cl5ItMKZXdB/CacQ4PMH3oordgqhDC55\nRTzREX4XtoDpKv1XIluoYXgh0Qpn7uK1Ot2Xodzfdp7TihCbRrKMslfEE52uekIWBOuhQhuoSD89\n7hbHmSdwCDiBlQIfjbfiij2IlVy0fTR3pCuu63jq/IuO655TGde3PHFVOPPqRB146cOvsyU7kbfi\niiknH8p+ZnMjPopWuujyVrqwI4VVs7fc613ofwEOl3StpOvYMgAAAABJRU5ErkJggg==\n",
       "text/latex": [
-       "$$P = \\frac{R T}{\\bar{V} - b} - \\frac{a}{\\bar{V}^{2} + \\bar{V} b u + b^{2} w}$$"
+       "$$P = \\frac{R T}{V - b} - \\frac{a}{V^{2} + V b u + b^{2} w}$$"
       ],
       "text/plain": [
-       "        R⋅T                     a              \n",
-       "P = ─────────── - ─────────────────────────────\n",
-       "    \\bar{V} - b          2                  2  \n",
-       "                  \\bar{V}  + \\bar{V}⋅b⋅u + b ⋅w"
+       "     R⋅T            a        \n",
+       "P = ───── - ─────────────────\n",
+       "    V - b    2            2  \n",
+       "            V  + V⋅b⋅u + b ⋅w"
       ]
      },
      "metadata": {},
@@ -43,12 +43,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$$P = \\frac{R T}{\\bar{V} - b} - \\frac{a}{\\bar{V}^{2} + \\bar{V} b u + b^{2} w}$$\n"
+      "$$P = \\frac{R T}{V - b} - \\frac{a}{V^{2} + V b u + b^{2} w}$$\n"
      ]
     }
    ],
    "source": [
-    "V,a,b,R,T,u,w = sym.symbols(r'\\bar{V},a,b,R,T,u,w')\n",
+    "V,a,b,R,T,u,w = sym.symbols(r'V,a,b,R,T,u,w')\n",
     "\n",
     "#Equação de Soave [Poling]\n",
     "P=R*T/(V-b)-a/(V**2+u*b*V+w*b**2)\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -341,12 +341,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Residual A"
+    "# Residual A & Residual G"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -617,13 +617,6 @@
    "source": [
     "print(G_res1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
