--- a/2018_2/trabalho_mistura.ipynb
+++ b/2018_2/trabalho_mistura.ipynb
@@ -27,27 +27,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metodologia\n",
-    "\n",
-    "1. [ ] **programação $P(T,V)$ usando a equação de Peng e Robinson (Reid, Prausnitz & Poling, 1987 - pp 42, 43)**\n",
-    "  1. [ ] **programar a regra de mistura (Reid, Prausnitz & Poling, 1987 - pp 82)**\n",
-    "  1. [ ] **cálculo em sequência de $P$ versus sequência de $V$ para dados $T$ para uma composição rica no componente pesado**\n",
-    "  1. [ ] **cálculo em sequência de $P$ versus sequência de $V$ para dados $T$ para uma composição rica no componente leve**\n",
-    "  1. [ ] **desenhar isotermas no plano $P$ versus $V$ para uma composição rica no componente pesado**\n",
-    "  1. [ ] **desenhar isotermas no plano $P$ versus $V$ para uma composição rica no componente leve**\n",
-    "  \n",
-    "1. [ ] programação $V(P,T)$ usando método de solução de raiz de polinômios (numpy.roots)\n",
-    "  1. [ ] implementar lógica de classificação de raízes de volume (líquido, vapor, intermediária e não física)\n",
-    "  1. [ ] comparar calculos pontuais com as isotermas\n",
-    "  \n",
-    "1. [ ] **programação de coeficientes de fugacidade na mistura (Reid, Prausnitz & Poling, 1987, pp 144, 145)**\n",
-    "  1. [ ] testar pontualmente\n",
-    "\n",
-    "1. [ ] **programação de resolução da pressão de ponto de bolha e ponto de orvalho (Sandler, 2017, pp 561, 562)**\n",
-    "    1. [ ] cálculo em sequência de pressão de bolha e composição da fase vapor ($y$)versus sequência de $x$ para dada T\n",
-    "1. [ ] geração do envelope de fases no plano $P$ versus $x_1$ (Smith, van Ness & Abbott, 2007)\n",
-    "    1. [ ] desenhar $P$ versus $x_1$ para dado T $\\to$ curva de ponto de bolha\n",
-    "    1. [ ] desenhar $P$ versus $y_1$ para dado T $\\to$ curva de ponto de orvalho\n"
+    "1. [ ] Programação da forma P(T,V) para misturas usando a equação de Peng e Robinson (Reid,\n",
+    "Prausnitz & Poling, 1987 - pp 42, 43)\n",
+    "  1. [ ] Programar a regra de combinação e mistura clássica (Reid, Prausnitz & Poling, 1987 -\n",
+    "pp 82)\n",
+    "    1. [ ] usar k_ij= 0\n",
+    "  2. [ ] cálculo em sequência de P versus sequência de V para dados T para uma composição\n",
+    "rica em um componente pesado.\n",
+    "  3. [ ] cálculo em sequência de P versus sequência de V para dados T para uma composição\n",
+    "rica em um componente leve.\n",
+    "  4. [ ] Desenhar isotermas no plano P versus V para uma composição ricaem um componente\n",
+    "pesado\n",
+    "  5. [ ] Desenhar isotermas no plano P versus V para uma composição rica em um componente\n",
+    "leve\n",
+    "2. [ ] Programação V(P,T) usando método de solução de raiz de polinômios (numpy.roots)\n",
+    "  1. [ ] Implementar lógica de classificação de raízes de volume (líquido, vapor, intermediária e\n",
+    "não física)\n",
+    "  2. [ ] Comparar calculos pontuais com as isotermas\n",
+    "3. [ ] Programação de coeficientes de fugacidade na mistura (Reid, Prausnitz & Poling, 1987, pp\n",
+    "144, 145)\n",
+    "    1. [ ] testar se coeficientes de fugacidade para raiz de volume de gas a baixa pressão são\n",
+    "próximos à 1 (comportamento de gás ideal)?\n",
+    "    2. [ ] testar se no caso limite: coeficientes de fugacidade no caso de numero de componentes\n",
+    "ser 1 dá igual à exp(G{RES}/(RT)) da primeira parte do trabalho?\n",
+    "4. [ ] programação de resolução da pressão de ponto de bolha (Sandler, 2017, pp 561, 562)\n",
+    "  1. [ ] Cálculo em sequência de pressão de bolha e composição da fase vapor (y) versus\n",
+    "sequência de x para dada T\n",
+    "5. [ ] Geração do envelope de fases para uma mistura binária no plano P versus x_1 (Smith, van\n",
+    "Ness & Abbott, 2007, pp 260)\n",
+    "  1. [ ] Desenhar P versus x_1 para dado T: curva de ponto de bolha\n",
+    "  2. [ ] Desenhar P versus y_1 para dado T: curva de ponto de orvalho\n",
+    "6. [ ] Implementar resolução de pressão de ponto de orvalho (adaptação do algoritmo de Sandler,\n",
+    "2017, pp 561, 562)\n",
+    "  1. [ ] Diagrama de fases de mistura no plano P versus T (Smith, van Ness & Abbott, 2007, pp\n",
+    "119)\n",
+    "    1. [ ] Calcular sequência de ponto de bolha versus sequência de temperatura para uma\n",
+    "mistura com uma composição definida rica no compoente leve\n",
+    "    2. [ ] Calcular sequência de ponto de orvalho versus sequência de temperatura para uma\n",
+    "mistura com composição definida rica no compoente pesado\n",
+    "    3. [ ] Desenhar P{SAT} leve, P{SAT} pesado, P{BOLHA} mistura 1 e P{ORVALHO}\n",
+    "mistura 1, P{BOLHA} mistura 2 e P{ORVALHO} mistura 2 no mesmo gráfico\n",
+    "(plano P versus T)"
    ]
   },
   {
