--- a/2018_2/trabalho_substancia_pura.ipynb
+++ b/2018_2/trabalho_substancia_pura.ipynb
@@ -29,30 +29,60 @@
    "source": [
     "# Metodologia\n",
     "\n",
-    "1. [ ] programação $P(T,V)$ usando a **equação de Peng e Robinson** (Reid, Prausnitz & Poling, 1987 - pp 42, 43)\n",
-    "  1. [ ] cálculo em sequência de $P$ versus sequência de $V$ para dados $T$\n",
-    "  1. [ ] desenhar isotermas no plano $P$ versus $V$\n",
-    "1. [x] programação $V(P,T)$ usando método de solução de raiz de polinômios (numpy.roots)\n",
-    "  1. [x] implementar lógica de classificação de raízes de volume (líquido, vapor, intermediária e não física)\n",
-    "  1. [ ] comparar calculos pontuais com as isotermas\n",
-    "1. [x] programação de pressão limite superior e inferior para cálculo de equilibrio de fases (baseado em Topliss, Dimitrelis & Prausnitz, 1988)\n",
-    "  1. [ ] comparar calculos pontuais com as isotermas\n",
-    "1. [x] programação de energia de gibbs residual (Reid, Prausnitz & Poling, 1987)\n",
-    "  1. [ ] cálculo em sequência $G^{\\mathrm{RES},L}$ e sequência $G^{\\mathrm{RES},V}$ versus sequência $P$ para dado $T$\n",
-    "  1. [ ] desenhar $G^{\\mathrm{RES},L}$ e $G^{\\mathrm{RES},V}$ versus $P$ para dado $T$ e verificar existência de solução para o critério de equilíbrio de fases.\n",
-    "1. [ ] programação de resolução da pressão de saturação usando método de bisseção (scipy.optimize.bisect)\n",
-    "    1. [ ] cálculo em sequência de pressão de saturação versus sequência de $T$\n",
-    "    1. [ ] desenhar $P^\\mathrm{SAT}$ versus $T$\n",
-    "1. [ ] geração do envelope de fases no plano $P$ versus $V$ (Smith, van Ness & Abbott, 2007)\n",
-    "    1. [ ] cálculo em sequência de volumes de líquido e olume de vapor para cada par $(T,P)$ na curva de $P^\\mathrm{SAT}$\n",
-    "    1. [ ] desenhar envelope de fases no diagrama $P$ versus $V$ com algumas isotermas\n",
-    "1. [ ] **programação de entalpia e entropia residuais (Reid, Prausnitz & Poling, 1987)**\n",
-    "    1. [ ] **testar pontualmente**\n",
-    "    1. [ ] **geração dos envelope de fases nos planos $T$ versus $S^\\mathrm{RES}$ e $P$ versus $H^\\mathrm{RES}$ (Smith, van Ness & Abbott, 2007)**\n",
-    "    1. [ ] **cálculo em sequência de entalpia e entropia residuais de líquido e de vapor para cada par $(T,P)$ na curva de $P^\\mathrm{SAT}$**\n",
-    "    1. [ ] **desenhar envelope de fases no diagrama T versus $S^\\mathrm{RES}$ com algumas isóbaras**\n",
-    "    1. [ ] **desenhar envelope de fases no diagrama P versus $H^\\mathrm{RES}$ com algumas isotermas**\n",
-    "    1. [ ] programar Cpig, hreal, sreal, desenhar graficos com hreal e sreal"
+    "1. [ ] Programar a forma P(T,V) da equação de Peng e Robinson (Reid, Prausnitz & Poling, 1987 -\n",
+    "pp 42, 43)\n",
+    "  1. [ ] Buscar parâmetros de componente puro (Smith, van Ness & Abbott, 2007, pp 507, 508,\n",
+    "509)\n",
+    "  2. [ ] Cálculo em sequência de P versus sequência de V para dados T igual, abaixo e acima da\n",
+    "temperatura crítica.\n",
+    "  3. [ ] Desenhar isotermas no plano P versus V\n",
+    "2. [ ] Programar a forma V(P,T) da equação de estado usando método de solução de raiz de\n",
+    "polinômios (numpy.roots)\n",
+    "  1. [ ] Implementar lógica de classificação de raízes de volume (líquido, vapor, intermediária e\n",
+    "não física)\n",
+    "  2. [ ] Comparar calculos pontuais com as isotermas já desenhadas\n",
+    "3. [ ] Programação de pressão limite superior e inferior para faixa de busca do cálculo de pressão\n",
+    "de saturação (baseado em Topliss, Dimitrelis & Prausnitz, 1988)\n",
+    "  1. [ ] Comparar cálculos pontuais com as isotermas\n",
+    "4. [ ] Programação de energia de Gibbs residual (Reid, Prausnitz & Poling, 1987, pp 102)\n",
+    "  1. [ ] Cálculo em sequência de G{RES,L} e sequência G{RES,V} versus sequência P para\n",
+    "dado T.\n",
+    "  2. [ ] Desenhar G{RES,L} e G{RES,V} versus P para dado T e verificar existência de solução\n",
+    "para o critério de equilíbrio de fases (igualdade de potencial químico para o componente\n",
+    "entre fase líquida e vapor) na temperatura dada.\n",
+    "5. [ ] Programação de resolução da pressão de saturação usando método de bisseção\n",
+    "(scipy.optimize.bisect)\n",
+    "  1. [ ] Cálculo em sequência de pressão de saturação (P{SAT}) versus sequência de T\n",
+    "  2. [ ] Desenhar P{SAT} versus T (Smith, van ness, Abbott, 2007, pp 48 – parte líquido-vapor)\n",
+    "  3. [ ] Programar correlação de Antoine e comparar, no gráfico, os resultados da correlação\n",
+    "com os resultados da equação de estado (Smith, van ness, Abbott, 2007, pp 510)\n",
+    "6. [ ] Geração do envelope de fases no plano P versus V (Smith, van Ness & Abbott, 2007, pp 67)\n",
+    "  1. [ ] Cálculo em sequência de volumes de líquido e olume de vapor para cada par (T,P) na\n",
+    "curva de P{SAT}\n",
+    "  2. [ ] Desenhar envelope de fases no diagrama P versus V com algumas isotermas (Smith van\n",
+    "Ness Abbott, 2007, pp 67)\n",
+    "7. [ ] Programação e diagrama de entalpia e entropia residuais (Reid, Prausnitz & Poling, 1987, pp\n",
+    "102)\n",
+    "  1. [ ] Testar pontualmente (H_res e S_res próximos de zero a baixa pressão - comportamento\n",
+    "de gás ideal?)\n",
+    "  2. [ ] Geração dos envelope de fases nos planos P versus H{RES} (Smith, van Ness & Abbott,\n",
+    "2007, pp 168 – parte líquido-vapor)\n",
+    "    1. [ ] Cálculo em sequência de entalpia e entropia residuais de líquido e de vapor para cada\n",
+    "par (T,P) na curva de P{SAT}\n",
+    "    2. [ ] Desenhar envelope de fases no diagrama P versus H{RES}\n",
+    "    3. [ ] Implementar cálculo de Cp de gás ideal (Smith van ness abbott 2007, pp 119, 635)\n",
+    "    4. [ ] Calcular H de gás real em relação a uma temperatura de referência T0\n",
+    "    5. [ ] Desenhar envelope de fases no diagrama P versus H\n",
+    "  3. [ ] Geração dos envelope de fases nos planos T versus S{RES} (Smith, van Ness & Abbott,\n",
+    "2007, pp 168 – parte líquido-vapor)\n",
+    "    1. [ ] Calcular e desenhar algumas isotermas no diagrama P versus H\n",
+    "    2. [ ] Desenhar envelope de fases no diagrama T versus S{RES}\n",
+    "    3. [ ] Implementar cálculo de isóbaras (dado P e V calcular T)\n",
+    "       1. [ ] Implementar cálculo de T dado P e v para van der waals (analítico)\n",
+    "       2. [ ] Implementar solução numérica usando a solução de van der waals como estimativa inicial (scipy.optimize.fsolve)\n",
+    "    4. [ ] calcular e desenhar algumas isóbaras no diagrama T versus S\n",
+    "    5. [ ] Calcular H de gás real em relação a uma temperatura de referência T0\n",
+    "    6. [ ] Desenhar envelope de fases no diagrama P versus H"
    ]
   },
   {
@@ -73,6 +103,13 @@
     ">* [scipy.optimize.bisect](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.bisect.html)\n",
     ">* [scipy.optimize.fsolve](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.fsolve.html)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
