edited last tasks of part1

--- a/2018_2/modelo_base_trabalho_i_mistura.ipynb
+++ b/2018_2/modelo_base_trabalho_i_mistura.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [ ] Programação da forma P(T,V) para misturas usando a equação de Peng e Robinson (Reid,\n",
+    "1. [ ] Programação da forma P(T,V,x) para misturas usando a equação de Peng e Robinson (Reid,\n",
     "Prausnitz & Poling, 1987 - pp 42, 43)\n",
     "  1. [ ] Programar a regra de combinação e mistura clássica (Reid, Prausnitz & Poling, 1987 -\n",
     "pp 82)\n",
@@ -40,7 +40,7 @@
     "pesado\n",
     "  5. [ ] Desenhar isotermas no plano P versus V para uma composição rica em um componente\n",
     "leve\n",
-    "2. [ ] Programação V(P,T) usando método de solução de raiz de polinômios (numpy.roots)\n",
+    "2. [ ] Programação V(P,T,x) usando método de solução de raiz de polinômios (numpy.roots)\n",
     "  1. [ ] Implementar lógica de classificação de raízes de volume (líquido, vapor, intermediária e\n",
     "não física)\n",
     "  2. [ ] Comparar calculos pontuais com as isotermas\n",
